# learning-rust

./: LICENSE
01_guessing_game/src/: main.rs
02_rocket/: Cargo.toml
02_rocket/src/: main.rs
02_rocket/src/api/controller/: blog_post.rs
03_yew_todo/: Cargo.toml  index.html
03_yew_todo/src/: lib.rs
03_yew_todo/src/app/routes/: index.rs
04_going_full_stack/: Cargo.toml
04_going_full_stack/fakebooks/: Cargo.toml
04_going_full_stack/fakebooks/src/: app.rs  lib.rs  main.rs
04_going_full_stack/fakebooks/src/app/feature/: dark_mode_toggle.rs  mod.rs
04_going_full_stack/fakebooks/src/app/routes/: accounts.rs  dashboards.rs  expenses.rs  mod.rs  reports.rs  sales.rs
04_going_full_stack/fakebooks/src/app/routes/sales/: customers.rs  deposits.rs  index.rs  invoices.rs  subscriptions.rs
04_going_full_stack/fakebooks/src/app/routes/sales/invoices/: from_id.rs
04_going_full_stack/fakebooks/style/: main.scss
04_going_full_stack/fakebooks_macros/: Cargo.toml
04_going_full_stack/fakebooks_macros/src/: lib.rs
04_going_full_stack/fakebooks_macros/test/: lib.test.rs
05-bare-metal/: Cargo.toml  kernel.img  kernel7.img
05-bare-metal/.cargo/: config
05-bare-metal/src/: main.rs
src/: main.rs
src/01_guessing_game/: game.rs
